{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 82,
  "lineage": "5b8f38fa-c9cf-fd6f-2a4e-41173a91b075",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "incredible_9_9s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-windows-NT4",
            "arn": "arn:aws:ec2:us-east-1::instance/i-8c4a299d812382376",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-8c4a299d812382376",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "None",
            "monitoring": false,
            "primary_network_interface_id": "eni-4d1f1b1b",
            "private_dns": "ip-10-165-176-29.ec2.internal",
            "private_ip": "10.165.176.29",
            "public_dns": "ec2-54-214-52-27.compute-1.amazonaws.com",
            "public_ip": "54.214.52.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-f2018607",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9166c82a",
            "tags": {
              "Name": "incredible-9-9s-of-uptimes-server-0"
            },
            "tags_all": {
              "Name": "incredible-9-9s-of-uptimes-server-0"
            },
            "tenancy": "default"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.current",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-windows-NT4",
            "arn": "arn:aws:ec2:us-east-1::instance/i-16fe5fccfd00d0b8f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-16fe5fccfd00d0b8f",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "None",
            "monitoring": false,
            "primary_network_interface_id": "eni-ec540b7a",
            "private_dns": "ip-10-238-40-61.ec2.internal",
            "private_ip": "10.238.40.61",
            "public_dns": "ec2-54-214-103-105.compute-1.amazonaws.com",
            "public_ip": "54.214.103.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-495afa41",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9166c82a",
            "tags": {
              "Name": "incredible-9-9s-of-uptimes-server-1"
            },
            "tags_all": {
              "Name": "incredible-9-9s-of-uptimes-server-1"
            },
            "tenancy": "default"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-acl/acl-1feb076f",
            "default_network_acl_id": "acl-1feb076f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "45.72.3.145/32",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 90,
                "to_port": 0
              }
            ],
            "id": "acl-1feb076f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "000000000000",
            "subnet_ids": [
              "subnet-39c79b69",
              "subnet-46f79e14",
              "subnet-9166c82a"
            ],
            "tags": {
              "FixedItself": "true",
              "Name": "nacl-us-east-1-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "tags_all": {
              "FixedItself": "true",
              "Name": "nacl-us-east-1-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "vpc_id": "vpc-95d1c468"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.private_data",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1::internet-gateway/igw-0cefa38c",
            "id": "igw-0cefa38c",
            "tags": {
              "FixedItself": "true",
              "Name": "igw-us-east-1-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "tags_all": {
              "FixedItself": "true",
              "Name": "igw-us-east-1-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "vpc_id": "vpc-95d1c468"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cefa38c",
            "id": "r-rtb-57607dac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-57607dac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1::route-table/rtb-470949a9",
            "id": "rtb-470949a9",
            "owner_id": "",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "FixedItself": "true",
              "Name": "rtb-priv-us-east-1-1a-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "tags_all": {
              "FixedItself": "true",
              "Name": "rtb-priv-us-east-1-1a-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "vpc_id": "vpc-95d1c468"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1::route-table/rtb-f86cf59c",
            "id": "rtb-f86cf59c",
            "owner_id": "",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "FixedItself": "true",
              "Name": "rtb-priv-data-us-east-1-1a-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "tags_all": {
              "FixedItself": "true",
              "Name": "rtb-priv-data-us-east-1-1a-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "vpc_id": "vpc-95d1c468"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1::route-table/rtb-57607dac",
            "id": "rtb-57607dac",
            "owner_id": "",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "FixedItself": "true",
              "Name": "rtb-pub-us-east-1-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "tags_all": {
              "FixedItself": "true",
              "Name": "rtb-pub-us-east-1-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "vpc_id": "vpc-95d1c468"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-17e55bc6",
            "route_table_id": "rtb-470949a9",
            "subnet_id": "subnet-9166c82a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_app",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-947dac7c",
            "route_table_id": "rtb-f86cf59c",
            "subnet_id": "subnet-46f79e14"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_data",
            "module.vpc.aws_subnet.private_data",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-64676d55",
            "route_table_id": "rtb-57607dac",
            "subnet_id": "subnet-39c79b69"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111122223333:subnet/subnet-9166c82a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.192/28",
            "id": "subnet-9166c82a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111122223333",
            "tags": {
              "FixedItself": "true",
              "Name": "sub-priv-us-east-1-1a-d-central-services",
              "ProjectId": "the-greatest-project-123",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "FixedItself": "true",
              "Name": "sub-priv-us-east-1-1a-d-central-services",
              "ProjectId": "the-greatest-project-123",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-95d1c468"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111122223333:subnet/subnet-46f79e14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.224/28",
            "id": "subnet-46f79e14",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111122223333",
            "tags": {
              "FixedItself": "true",
              "Name": "sub-priv-data-us-east-1-1a-d-central-services",
              "ProjectId": "the-greatest-project-123",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "FixedItself": "true",
              "Name": "sub-priv-data-us-east-1-1a-d-central-services",
              "ProjectId": "the-greatest-project-123",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-95d1c468"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111122223333:subnet/subnet-39c79b69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.208/28",
            "id": "subnet-39c79b69",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111122223333",
            "tags": {
              "FixedItself": "true",
              "Name": "sub-pub-us-east-1-1a-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "tags_all": {
              "FixedItself": "true",
              "Name": "sub-pub-us-east-1-1a-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "vpc_id": "vpc-95d1c468"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1::vpc/vpc-95d1c468",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "192.168.0.0/22",
            "default_network_acl_id": "acl-1feb076f",
            "default_route_table_id": "rtb-405a0d13",
            "default_security_group_id": "sg-247cf6ad",
            "dhcp_options_id": "dopt-7a8b9c2d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-95d1c468",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-9f9db642",
            "ipv6_cidr_block": "2400:6500:2024:cdf7::/56",
            "main_route_table_id": "rtb-405a0d13",
            "tags": {
              "FixedItself": "true",
              "Name": "vpc-us-east-1-d-central-services",
              "ProjectId": "the-greatest-project-123"
            },
            "tags_all": {
              "FixedItself": "true",
              "Name": "vpc-us-east-1-d-central-services",
              "ProjectId": "the-greatest-project-123"
            }
          },
          "dependencies": [
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}